infra/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: banking-backend-service
  namespace: banking-prod
  labels:
    app: banking-backend
spec:
  type: ClusterIP
  selector:
    app: banking-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
